Fix navbar collapsed menu

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -36,6 +36,14 @@ header {
     height: 80px;
     background-color: transparent;
 
+    .navbar-toggle {
+      margin-top: 20px;
+
+      .icon-bar {
+        background-color: white;
+      }
+    }
+
     .navbar-brand {
       font-family: "Montserrat";
       font-size: xx-large;
@@ -65,6 +73,14 @@ header.visible {
   box-shadow: 0 1px 5px rgba(0,0,0,0.13);
 
   .navbar {
+    .navbar-collapse {
+      background-color: rgba(255,255,255,0.92);
+    }
+
+    .icon-bar {
+      background-color: #6cceec;
+    }
+
     a {
       color: #6cceec;
 
